# Braintronix

./: README.md
detection_from_pcd/: CMakeLists.txt
detection_from_pcd/src/: training.cpp
euclidian_clustering(objects)/: CMakeLists.txt
euclidian_clustering/src/: main.cpp
matrix_transform/: package.xml
matrix_transform/src/: matrix_transform.cpp~  real_time_transform.cpp  statistical_removal.cpp~
new_people/src/: main_ground_based_people_detection.cpp
people_recognition/src/: main_ground_based_people_detection.cpp
real_time_detection(objects)/: CMakeLists.txt  CMakeLists.txt~  package.xml~
real_time_detection(objects)/src/: pcd_read.cpp  real_time_transform.cpp
training/src/: training.cpp
voice_detector/src/: sph.py
